# DocMAE

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
config/: config.json  docaligner.gin  doctr.json  doctr_plus.json  finetune.json
demo/: background_segmentation.ipynb  doc3d_dataloader.ipynb
docmae/: __init__.py  fine_tune.py  inference.py  pretrain.py  pretrain_pl.py  train.py
docmae/data/: doc3d.py  doc3d_minio.py  docaligner.py  list_dataset.py
docmae/data/augmentation/: random_resized_crop.py
docmae/datamodule/: docaligner_module.py  mixed_module.py  utils.py
docmae/models/: docmae.py  doctr.py  doctr_custom.py  doctr_plus.py  mae.py  modules.py  rectification.py  transformer.py  upscale.py
docmae/utils/: replace_background.py  transforms.py
tests/: architecture.py  datasets.py
tests/doc3d/: LICENSE  tiny.txt
tests/doc3d/bm/: 9_6-vc_Page_002-YT40001.mat
tests/doc3d/uv/: 9_6-vc_Page_002-YT40001.exr
tests/dtd/labels/: tiny.txt
