[tool.poetry]
name = "docmae"
version = "0.1"
description = "Unofficial implementation of DocMAE paper"
authors = ["David Komorowicz <dawars00@gmail.com>"]
packages = [
    { include = "docmae" }  # dir name containing code if differs from name
]

[tool.poetry.dependencies]
python = "~3.10"
opencv-python-headless = "^4.5"
Pillow-SIMD = "^9.0"
torch = [
    {markers = "sys_platform == 'linux'", url="https://download.pytorch.org/whl/torch/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"},
    {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url="https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_10_9_x86_64.whl"},
    {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url="https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_11_0_arm64.whl"},
    {markers = "sys_platform == 'win32'", url="https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-win_amd64.whl"},
]
torchvision = [
    {markers = "sys_platform == 'linux'", url="https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl"},
    {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url="https://download.pytorch.org/whl/cpu/torchvision-0.15.2-cp310-cp310-macosx_10_9_x86_64.whl"},
    {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url="https://download.pytorch.org/whl/cpu/torchvision-0.15.2-cp310-cp310-macosx_10_9_x86_64.whl"},
    {markers = "sys_platform == 'win32'", url="https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-win_amd64.whl"},
]
torchmetrics = "^0.11.1"
torchsummary = "^1.5.1"
datasets = "^2.12"
transformers = "^4.29"

matplotlib = "^3.6"
numpy = "^1.24"
scikit-image = "^0.19"
scikit-learn = ">=1.0"
tensorboard = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# optional scripts
[tool.poetry.scripts]
docmae-pretrain = "docmae.pretrain:main"

[tool.black]
line-length = 128
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''